config/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-hostname-service
spec:
  selector:
    app: hello-hostname
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
