config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-hostname-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: hello-hostname
