config/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-hostname-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dp-test.kexp.org
      secretName: flask-le-prod
  rules:
    - host: dp-test.kexp.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-hostname-service
                port:
                  number: 80
